# cropper_rust

./: 1test.bash  Cargo.toml  help.bash
src/: config.rs  e.rs  main.rs
