[package]
name = "image_cropper"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.23.14"
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.21"
imageproc = "0.25.0"
futures = "0.3.30"
